feat: added SIMD Matrix for faster Matrix Operations than naive implementations
I have also added JUnit 6 test for the SIMD Matrix class to test for its correctness and performance compared to naive matrix multiplication

Signed-off-by: Saptarshi Sarkar <saptarshi.programmer@gmail.com>